--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,24 +23,24 @@ jobs:
           push: true
           tags: your-image-name:latest
 
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+#   deploy:
+#     runs-on: ubuntu-latest
+#     needs: build
+#     steps:
+#       - name: Checkout code
+#         uses: actions/checkout@v2
 
-      - name: Install SSH client
-        run: sudo apt-get install -y openssh-client
+#       - name: Install SSH client
+#         run: sudo apt-get install -y openssh-client
 
-      - name: Deploy to production server
-        env:
-          PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-          HOST: ${{ secrets.PRODUCTION_HOST }}
-          USER: ${{ secrets.PRODUCTION_USER }}
-        run: |
-          echo "$PRIVATE_KEY" > private_key.pem
-          chmod 600 private_key.pem
-          scp -i private_key.pem -r . $USER@$HOST:/app
-          ssh -i private_key.pem -t $USER@$HOST "cd /app && docker-compose down && docker-compose pull && docker-compose up -d"
-          rm -f private_key.pem
+#       - name: Deploy to production server
+#         env:
+#           PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+#           HOST: ${{ secrets.PRODUCTION_HOST }}
+#           USER: ${{ secrets.PRODUCTION_USER }}
+#         run: |
+#           echo "$PRIVATE_KEY" > private_key.pem
+#           chmod 600 private_key.pem
+#           scp -i private_key.pem -r . $USER@$HOST:/app
+#           ssh -i private_key.pem -t $USER@$HOST "cd /app && docker-compose down && docker-compose pull && docker-compose up -d"
+#           rm -f private_key.pem
